# DSW-24-25

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dump_postgres_docker.sh  package-lock.json  pyproject.toml  ruff.toml
backend_bank/: Dockerfile  (+7 more)
backend_main/: Dockerfile  README.md  create_superuser.py  create_superuser.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  runserver.bat
backend_main/account/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend_main/account/migrations/: 0001_initial.py  0002_account_balance_non_negative.py  0002_alter_account_table.py  0003_alter_account_user.py
backend_main/account/views/: viewsAdmin.py  viewsUser.py
backend_main/backend_main/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
backend_main/blocks/: admin.py  models.py  serializers.py  urls.py
backend_main/blocks/migrations/: 0001_initial.py
backend_main/blocks/tests/: tests_admin.py  tests_user.py
backend_main/blocks/views/: viewsAdmin.py  viewsUser.py
backend_main/creditcard/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
backend_main/creditcard/migrations/: 0001_initial.py  0002_creditcard_is_default_creditcard_name_and_more.py  0002_initial.py  0003_remove_creditcard_name_creditcard_card_alias.py  0003_remove_creditcard_unique_default_card_and_more.py  0004_alter_creditcard_expiration_date.py  0004_remove_creditcard_unique_default_card.py  0005_alter_creditcard_number.py  0005_alter_creditcard_user.py
backend_main/dashboard/: urls.py
backend_main/dashboard/tests/: test_admin.py
backend_main/dashboard/views/: viewsAdmin.py  viewsUser.py
backend_main/friendships/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend_main/friendships/migrations/: 0001_initial.py  0002_alter_friendrequest_receiver_and_more.py  0002_initial.py  0003_alter_friendrequest_status.py  0004_remove_friendship_user1_remove_friendship_user2_and_more.py
backend_main/friendships/tests/: tests_admin.py  tests_user.py
backend_main/healthz/: apps.py  urls.py  views.py
backend_main/login/: serializers.py  tests.py  views.py
backend_main/mercure/: mercure.py
backend_main/register/: admin.py  models.py  serializers.py  tests.py  views.py
backend_main/transactions/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
backend_main/userSettings/: models.py  serializers.py  views.py
backend_main/users/: admin.py  models.py  urls.py  views.py
(+237 files in other folders)
