[project]
name = "TFG"
version = "0.0.1"
authors = [
  { name="Elena Ballesteros Morallón", email = "your.email@example.com" },
]
description = "TFG"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.1.3",
    "tqdm",
    "scipy",
    "codecarbon==2.8.3",
    "pyyaml",
    "seaborn",
    "matplotlib",
]

[project.optional-dependencies]
tests = ["pytest"]
linters = ["black", "ruff"]

[project.urls]
"Repository" = "https://github.com/elena-17/TFG"

[tool.hatch.envs.dev]
dependencies = [
    "pre-commit",
]

[tool.hatch.envs.dev.scripts]
precommit-install = "pre-commit install"
precommit-update = "pre-commit autoupdate"
precommit = "pre-commit run --show-diff-on-failure --color=always --all-files"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
task-tags = ["TODO", "FIXME"]
fixable = ["ALL"]
extend-ignore = ["E501", "E722"]

[tool.black]
target-version = ["py310"]
line-length = 88
include = '\.pyi?$'

[tool.ruff.lint.isort]
known-first-party = []
known-third-party = []
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
