[project]
name = "name"
version = "0.0.1"
authors = [
  { name="Elena Ballesteros Morallón", email="elena.ballesteros2@alu.uclm.es" },
  { name="Antonio Campallo Gómez", email="@alu.uclm.es" },

]
description = "Implements peer-to-peer transactions"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "django==5.1.6",
    "requests==2.32.3",
    "requests-mock==1.12.1",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.10",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.7.0",
]

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
"Repository" = "https://github.com/elena-17/DSW-24-25"
